# Aethos

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  aethos.py  alembic.ini  docker-compose.db.yml  docker-compose.yml  langgraph.json  main.py  package-lock.json  pyproject.toml  start-dev.bat  start-dev.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  constants.ts  styles.css  types.ts
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 20260513_0001_phase1_storage_foundation.py  20260513_0002_auth_schema_foundation.py  20260513_0003_thread_and_oauth_storage.py  (+2 more)
src/: __init__.py  config.py
tests/: auth_repository_contract.py  conftest.py  test_abuse_controls.py  test_api_error_tracing.py  test_async_jsonl_checkpointer.py  test_auth_repository.py  test_auth_repository_provider.py  test_backend_structure_guardrails.py  test_chat_message_adapters.py  test_chat_thread_reasoning.py  test_context_status.py  test_database_config.py  test_daytona_manager.py  test_deepseek_reasoning_payload.py  test_extensions_callback.py  test_file_security.py  test_local_backend_filesystem.py  test_loop_guards.py  test_permission_resume_grants.py  test_permission_system_integration.py  test_postgres_auth_repository.py  test_postgres_checkpointer.py  test_postgres_connections_repository.py  test_reasoning_config.py  test_subagents.py  test_thread_source_of_truth.py  test_tool_input_formatting.py  test_tool_streaming.py  test_v1_route_helpers.py  test_v1_task_endpoints.py
(+1078 files in other folders)
