[project]
name = "aethos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "aiofiles>=23.0",
    "aiosqlite>=0.20",
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-community",
    "tavily-python",
    "python-dotenv",
    "pyyaml",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
    "daytona>=0.161.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[project.optional-dependencies]
daytona = [
    "daytona",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "nbformat>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "tmp",
    "node_modules",
    "openclaude",
    ".git",
    ".venv",
    ".pytest_cache",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
